--- a/artikel.html
+++ b/artikel.html
@@ -20,28 +20,90 @@
         }
     </style>
 </head>
-<body class="min-h-screen">
+<body class="min-h-screen flex flex-col">
 
-    <!-- Header -->
+    <!-- Header Adaptif -->
     <header class="bg-white shadow-md sticky top-0 z-50">
-        <!-- ... (Kode Header sama seperti di index.html) ... -->
+        <nav class="container mx-auto px-4 sm:px-6 py-3">
+            <div class="flex justify-between items-center">
+                <a href="./index.html" class="flex items-center gap-3">
+                    <img src="https://i.imgur.com/vOlASeq.png" alt="Logo SMAN 3 Lamongan" class="h-12 w-12">
+                    <div class="hidden sm:block">
+                        <p class="font-bold text-blue-700 text-lg">English Court</p>
+                        <p class="text-xs text-slate-500 -mt-1">SMAN 3 Lamongan</p>
+                    </div>
+                </a>
+                <nav class="hidden md:flex items-center space-x-6 font-semibold">
+                    <a href="./index.html" class="text-slate-600 hover:text-blue-600 transition-colors">Beranda</a>
+                    <a href="./profil.html" class="text-slate-600 hover:text-blue-600 transition-colors">Profil</a>
+                    <a href="./artikel.html" class="text-blue-600">Artikel</a>
+                    <a href="./informasi.html" class="text-slate-600 hover:text-blue-600 transition-colors">Informasi</a>
+                    <a href="./kontak.html" class="text-slate-600 hover:text-blue-600 transition-colors">Kontak</a>
+                </nav>
+                <a id="guest-login-button" href="./login.html" class="bg-slate-100 text-slate-700 font-semibold px-6 py-2 rounded-lg hover:bg-slate-200 transition-colors shadow-sm border border-slate-200 hidden">
+                    Masuk
+                </a>
+                <div id="user-profile-area" class="relative hidden">
+                    <button id="profile-button" class="flex items-center gap-2 group">
+                        <div class="hidden sm:block text-right">
+                            <p class="font-semibold text-sm text-slate-700" id="user-email-display">Memuat...</p>
+                        </div>
+                        <img id="profile-avatar" src="https://placehold.co/40x40/dbeafe/4338ca?text=U" alt="User Avatar" class="w-10 h-10 rounded-full border-2 border-slate-200 group-hover:border-blue-400 transition object-cover">
+                    </button>
+                    <div id="profile-dropdown" class="hidden absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-xl z-20 py-1">
+                        <a href="./profil.html" class="flex items-center gap-3 px-4 py-2 text-sm text-slate-700 hover:bg-slate-100">Profil Saya</a>
+                        <a href="./setting.html" class="flex items-center gap-3 px-4 py-2 text-sm text-slate-700 hover:bg-slate-100">Pengaturan</a>
+                        <div class="border-t border-slate-100 my-1"></div>
+                        <a href="#" id="logout-button" class="flex items-center gap-3 w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-red-50">Logout</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <main class="container mx-auto px-4 sm:px-6 py-12">
+    <main class="container mx-auto px-4 sm:px-6 py-12 flex-grow">
         <div class="text-center mb-12">
             <h1 class="text-4xl font-extrabold text-slate-800">Artikel & Berita Klub</h1>
             <p class="text-lg text-slate-500 mt-2">Baca berita terbaru dan dapatkan tips menarik seputar Bahasa Inggris.</p>
         </div>
 
-        <!-- Grid untuk menampilkan kartu artikel -->
         <div id="articles-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
-            <!-- Kartu artikel akan dimuat di sini oleh JavaScript -->
             <p class="col-span-full text-center text-slate-500">Memuat artikel...</p>
         </div>
     </main>
 
-    <footer class="bg-slate-800 text-white mt-16">
-        <!-- ... (Kode Footer sama seperti di index.html) ... -->
+    <footer class="bg-slate-800 text-white">
+        <div class="container mx-auto px-6 py-12">
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+                <div>
+                    <h3 class="font-bold text-lg">English Court</h3>
+                    <p class="mt-2 text-slate-400 text-sm">SMAN 3 Lamongan</p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-lg">Menu</h3>
+                    <ul class="mt-2 space-y-2 text-sm">
+                        <li><a href="./profil.html" class="text-slate-400 hover:text-white">Profil</a></li>
+                        <li><a href="./artikel.html" class="text-slate-400 hover:text-white">Artikel</a></li>
+                        <li><a href="./kontak.html" class="text-slate-400 hover:text-white">Kontak</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-bold text-lg">Hubungi Kami</h3>
+                    <p class="mt-2 text-slate-400 text-sm">Jl. Veteran No. 45, Lamongan</p>
+                    <p class="text-slate-400 text-sm">ec.smagala@email.com</p>
+                </div>
+                <div>
+                    <h3 class="font-bold text-lg">Ikuti Kami</h3>
+                    <div class="flex gap-4 mt-2">
+                        <a href="#" class="text-slate-400 hover:text-white">Instagram</a>
+                        <a href="#" class="text-slate-400 hover:text-white">YouTube</a>
+                    </div>
+                </div>
+            </div>
+            <div class="border-t border-slate-700 mt-8 pt-6 text-center text-sm text-slate-500">
+                &copy; 2025 English Court SMAN 3 Lamongan. All Rights Reserved.
+            </div>
+        </div>
     </footer>
 
     <script>
@@ -52,6 +114,42 @@
             const supabaseClient = createClient(SUPABASE_URL, SUPABASE_KEY);
 
             const articlesGrid = document.getElementById('articles-grid');
+            const userProfileArea = document.getElementById('user-profile-area');
+            const guestLoginButton = document.getElementById('guest-login-button');
+
+            async function checkUserSession() {
+                const { data } = await supabaseClient.auth.getSession();
+                if (data.session) {
+                    setupForMember(data.session.user);
+                } else {
+                    setupForGuest();
+                }
+            }
+
+            function setupForMember(user) {
+                guestLoginButton.classList.add('hidden');
+                userProfileArea.classList.remove('hidden');
+                const userEmailDisplay = document.getElementById('user-email-display');
+                const logoutButton = document.getElementById('logout-button');
+                const profileButton = document.getElementById('profile-button');
+                const profileDropdown = document.getElementById('profile-dropdown');
+                userEmailDisplay.textContent = user.email;
+                logoutButton.addEventListener('click', async () => {
+                    await supabaseClient.auth.signOut();
+                    window.location.reload();
+                });
+                profileButton.addEventListener('click', () => profileDropdown.classList.toggle('hidden'));
+                window.addEventListener('click', (e) => {
+                    if (profileButton && !profileButton.contains(e.target) && profileDropdown && !profileDropdown.contains(e.target)) {
+                        profileDropdown.classList.add('hidden');
+                    }
+                });
+            }
+
+            function setupForGuest() {
+                userProfileArea.classList.add('hidden');
+                guestLoginButton.classList.remove('hidden');
+            }
 
             async function loadArticles() {
                 const { data, error } = await supabaseClient
@@ -70,16 +168,15 @@
                     return;
                 }
 
-                articlesGrid.innerHTML = ''; // Kosongkan grid
+                articlesGrid.innerHTML = '';
                 data.forEach(article => {
                     const articleCard = document.createElement('a');
                     articleCard.href = `./artikel-detail.html?id=${article.id}`;
                     articleCard.className = 'article-card bg-white rounded-lg shadow-md overflow-hidden group';
-                    
                     const formattedDate = new Date(article.created_at).toLocaleDateString('id-ID', { day: 'numeric', month: 'long', year: 'numeric' });
 
                     articleCard.innerHTML = `
-                        <img src="${article.image_url}" alt="${article.title}" class="w-full h-40 object-cover group-hover:scale-105 transition-transform duration-300">
+                        <div class="overflow-hidden"><img src="${article.image_url}" alt="${article.title}" class="w-full h-40 object-cover group-hover:scale-105 transition-transform duration-300"></div>
                         <div class="p-4">
                             <p class="text-sm text-blue-500 font-semibold">${article.category}</p>
                             <h3 class="font-bold mt-1 text-slate-800 group-hover:text-blue-600 transition-colors">${article.title}</h3>
@@ -90,6 +187,7 @@
                 });
             }
 
+            checkUserSession();
             loadArticles();
         });
     </script>
